--- a/style.css
+++ b/style.css
@@ -37,8 +37,6 @@ h2 {
     background-color: #333333;
     border: 1px solid #676777;
     margin-bottom: 10px;
-}
-
-.link-button a{
+    display: block;
     text-decoration: none;
 }
